--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
 		"type": "git",
 		"url": "Question_Answer_api"
 	},
-	"keywords": [ "express", "rest", "api" ],
+	"keywords": [
+		"express",
+		"rest",
+		"api"
+	],
 	"author": "Cihan Arğan",
 	"license": "MIT",
 	"dependencies": {
+		"dotenv": "^16.0.1",
 		"express": "^4.18.1"
 	},
 	"devDependencies": {
