--- a/config/env/config.env
+++ b/config/env/config.env
@@ -5,3 +5,7 @@ NODE_ENV=development
 #MongoDB Connection 
 
 MONGO_URI=mongodb+srv://cihan_argan:Ca(3032)@questionanswerapi.kfwhe.mongodb.net/question-answer?retryWrites=true&w=majority
+
+# JSON Web Token 
+JWT_SECRET_KEY=dolunay
+JWT_EXPIRE=10s
