jwt_and_express_cookie

--- a/config/env/config.env
+++ b/config/env/config.env
@@ -9,3 +9,6 @@ MONGO_URI=mongodb+srv://cihan_argan:Ca(3032)@questionanswerapi.kfwhe.mongodb.net
 # JSON Web Token 
 JWT_SECRET_KEY=dolunay
 JWT_EXPIRE=10s
+
+# Cookie
+JWT_COOKIE=10 
