Login user information

--- a/config/env/config.env
+++ b/config/env/config.env
@@ -8,7 +8,7 @@ MONGO_URI=mongodb+srv://cihan_argan:Ca(3032)@questionanswerapi.kfwhe.mongodb.net
 
 # JSON Web Token 
 JWT_SECRET_KEY=dolunay
-JWT_EXPIRE=20s
+JWT_EXPIRE=10m
 
 # Cookie
-JWT_COOKIE=20
+JWT_COOKIE=10
