forgot_password/nodemailer

--- a/config/env/config.env
+++ b/config/env/config.env
@@ -15,3 +15,9 @@ JWT_COOKIE=10
 
 # RESET PASSWORD
 RESET_PASSWORD_EXPIRE=3600000
+
+# NodeMailer 
+SMTP_HOST=smtp-mail.outlook.com
+SMTP_PORT=587
+SMTP_USER=cihan.argan@outlook.com
+SMTP_PASS=Ca(3032)
