--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.3.5",
 		"multer": "^1.4.5-lts.1",
-		"nodemailer": "^6.7.5"
+		"nodemailer": "^6.7.5",
+		"slugify": "^1.6.5"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.16"
